# lerobot-duo

./: .gitmodules  README.md  README_SSL_SETUP.md  phone_teleop.py  pyproject.toml  test.py  to_remove_camera_viewer.html  to_remove_camera_viewer_test.html  to_remove_webrtc_camera_server.py  vr_headset.py  vr_processor.py  vr_teleop.py  webrtc_camera_server.py  websocket_test.py
web-ui/: README.md  index.html
web-ui/js/: websocket-manager.js
web-ui/js/components/: controller-axes.js  laser-visibility.js  panel-manager.js  vr-button.js  webrtc-video.js  websocket-panel.js
