[tool.poetry]
name = "lerobot-duo"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Vlad Fatu <colegu123@gmail.com>"]

packages = [
    { include = "base" }
]

[tool.poetry.dependencies]
python = "^3.10"

# Add lerobot as a local dependency via relative path
lerobot = { path = "lerobot", develop = true }

[tool.poetry.group.dev.dependencies]
feetech-servo-sdk = "^1.0.0"
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"